# sift

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  preferences.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: ollama_recommendations.json
demo/: README.md  record.sh  scripted-editor.sh  wizard-prefs.tape
docs/: backends.md  deploy.md  models.md  prompting.md  sources.md
examples/: preferences-ai-tooling.yaml  preferences-finance-markets.yaml  preferences-research-papers.yaml  preferences-tech-news.yaml
src/sift/: adjacency.py  bench.py  config.py  conversational.py  digest.py  llm.py  main.py  recommender.py  scheduler.py  storage.py  telegram_bot.py  wizard.py
src/sift/sources/: __init__.py  arxiv.py  base.py  bluesky.py  github.py  hn.py  mastodon.py  reddit.py  rss.py
tests/: test_adjacency.py  test_bench.py  test_config.py  test_conversational.py  test_llm.py  test_recommender.py  test_sources.py  test_storage.py  test_telegram.py
